--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
     "name": "Telegram ID Bot",
     "description": "A bot to find telegram user id easily",
-    "repository": "https://github.com/BXBotz/Telegram-ID-Bot",
-    "logo": "https://telegra.ph/file/d357ab91889c3aca7c679.jpg",
+    "repository": "https://github.com/zmraj/Telegram-ID-Bot",
+    "logo": "https://telegra.ph/file/cea4f367bcd8f1d728faa.jpg",
     "keywords": [
         "telegram",
         "telegram id",
@@ -21,7 +21,7 @@
         },
         "UPDATE_CHANNEL": {
             "description": "Your Channel Username Without @",
-            "value": "BX_Botz"
+            "value": "DeltaBotsOfficial"
         }
     },
     "buildpacks": [
